src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/warnings.tessla
define f(x) := default(nil, x + 19)

out f(x = 23)